feat: Implement MyBatis-Plus auto-configuration with custom type handlers for enhanced JSON and array support; remove obsolete MybatisConfig and MybatisPlusConfig classes